ingress/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: kubeflow
  namespace: kubeflow
spec:
  rules:
  - host: kubeflow.example.com
    http:
      paths:
      - backend:
          serviceName: ambassador
          servicePort: 80
        path: /
  tls:
  - hosts:
    - kubeflow.example.com
    secretName: kubeflow-prod-cert
